# android-qbittorrent

./: .gitignore  BUILD.md  COMPLETE_BUILD_GUIDE.md  Dockerfile  README.md  build.gradle  docker-compose.yml  gradle.properties  settings.gradle
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-libtorrent.yml  build.yml  test.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/qbittorrent/: cJSON.c  cJSON.h  qbcore.cpp  qbcore.h
app/src/main/java/com/qbandroid/: MainActivity.kt  QBittorrentApp.kt
app/src/main/java/com/qbandroid/core/: NativeBridge.kt
app/src/main/java/com/qbandroid/model/: Models.kt
app/src/main/java/com/qbandroid/service/: BootReceiver.kt  TorrentService.kt
app/src/main/java/com/qbandroid/ui/screens/: AddTorrentScreen.kt  DownloadsScreen.kt  MainScreen.kt  SettingsScreen.kt  TrackersScreen.kt
app/src/main/java/com/qbandroid/ui/theme/: Theme.kt  Typography.kt
app/src/main/java/com/qbandroid/viewmodel/: TorrentViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: BACKGROUND_KEEPALIVE.md  COMPLETE_BUILD_GUIDE.md  PORTING.md
scripts/: build.sh  build_all.sh  build_apk.sh  build_boost.sh  build_env.sh  build_libtorrent.sh  build_openssl.sh  debug.sh  release.sh
